--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "date-fns": "^3.1.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
