--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,11 @@
     "mercadopago": "^2.0.6",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.5",
+    "whatsapp-web.js": "^1.23.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "qrcode-terminal": "^0.12.0"
   }
 }
