Servidor de whatsapp, genera linea y envia mensajes automaticos

--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mercadopago": "^2.0.6",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.5",
+    "socket.io": "^4.7.4",
     "whatsapp-web.js": "^1.23.0",
     "zod": "^3.22.4"
   },
