--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "axios": "^1.6.2",
     "date-fns": "^3.1.0",
+    "jquery": "^3.7.1",
+    "jquery-ui": "^1.13.2",
     "js-cookie": "^3.0.5",
+    "ldrs": "^1.0.1",
     "react": "^18.2.0",
     "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.20.0"
+    "react-qr-code": "^2.0.12",
+    "react-router-dom": "^6.20.0",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
