--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mercadopago": "^2.0.6",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "socket.io": "^4.7.4",
     "whatsapp-web.js": "^1.23.1-alpha.5",
