Whasapp mejora rendimiento de lineas persistentes

--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,15 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "set NODE_ENV=&&nodemon src/index.js",
+    "devProd": "set NODE_ENV=production&&nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.5",
+    "config": "^3.3.11",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
