--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "socket.io": "^4.7.4",
-    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus",
+    "whatsapp-web.js": "^1.34.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
